--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -8533,6 +8533,10 @@ h6.dark-blue, .h6-text.dark-blue {
   color: white;
 }
 
+p {
+  text-align: justify;
+}
+
 @media screen and (max-width: 1200px) {
   p, span, a, select, option, label, input, textarea, .link {
     font-size: 0.9rem;
@@ -10277,18 +10281,6 @@ h6.dark-blue, .h6-text.dark-blue {
   font-size: 1.25rem;
 }
 
-@media screen and (max-width: 1200px) {
-  .image-carousel > .image {
-    margin-left: -2.5em;
-    margin-right: -2.5em;
-  }
-}
-@media screen and (max-width: 900px) {
-  .image-carousel > .image {
-    margin-left: -3em;
-    margin-right: -3em;
-  }
-}
 @media screen and (max-width: 700px) {
   .image-carousel {
     display: flex;
