--- a/scss/elements/_box.scss
+++ b/scss/elements/_box.scss
@@ -12,10 +12,18 @@
         background-color: $primary;
         color: $text;
     }
-    
+
+    .#{$name}.box.block {
+        display: block;
+    }
+
     .#{$name}.inline-box {
         @extend %inline-box;
         background-color: $primary;
         color: $text;
+    }
+
+    .#{$name}.inline-box.block {
+        display: inline-block;
     }
 }
