--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -7,6 +7,7 @@ $screen-width-medium: 900px;
 $screen-width-small: 700px;
 
 $n-offset: 0em;
+$xs-offset: 0.25em;
 $s-offset: 0.5em;
 $m-offset: 1em;
 $l-offset: 1.5em;
@@ -16,7 +17,7 @@ $xxxl-offset: 5em;
 
 $offset-types: padding, margin;
 $offset-directions: top, bottom, left, right;
-$offset-values: ("n": $n-offset, "s": $s-offset, "m": $m-offset, "l": $l-offset, "xl": $xl-offset, "xxl": $xxl-offset, "xxxl": $xxxl-offset);
+$offset-values: ("n": $n-offset, "xs": $xs-offset, "s": $s-offset, "m": $m-offset, "l": $l-offset, "xl": $xl-offset, "xxl": $xxl-offset, "xxxl": $xxxl-offset);
 
 $fonts: "Century Gothic", Arial, sans-serif;
 
