--- a/scss/style.scss
+++ b/scss/style.scss
@@ -94,6 +94,30 @@ body {
     min-height: 100vh;
 }
 
+.expand {
+    @extend %flex;
+    
+    > * { 
+        animation: animation-shrink 0.2s ease forwards;
+    } 
+
+    &:hover {
+        > * { 
+            animation: animation-expand 0.2s ease forwards;
+        } 
+    }
+}
+
+@keyframes animation-expand {
+0%{margin: 0em; padding: 0.5em;}
+100%{margin: -0.5em; padding: 1em;}
+}
+
+@keyframes animation-shrink {
+0%{margin: -0.5em; padding: 1em;}
+100%{margin: 0em; padding: 0.5em;}
+}
+
 @each $name, $theme in variables.$themes {
     $primary: map.get($theme, "primary");
     $secondary: map.get($theme, "secondary");
