image carousel reset on resize

--- a/scss/elements/_images.scss
+++ b/scss/elements/_images.scss
@@ -13,12 +13,12 @@
     width: min-content;
     max-width: 50%;
 
-    // > .image {
-    //     margin: {
-    //         left: -2em;
-    //         right: -2em;
-    //     }
-    // }
+    > .image {
+        margin: {
+            left: -1em;
+            right: -1em;
+        }
+    }
 
     &::before {
         content: "<";
