--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,9 +2,9 @@
 @use "sass:color";
 
 $screen-width-xl: 1600px;
-$screen-width-large: 1200px;
-$screen-width-medium: 900px;
-$screen-width-small: 700px;
+$screen-width-l: 1200px;
+$screen-width-m: 900px;
+$screen-width-s: 700px;
 
 $n-offset: 0em;
 $xs-offset: 0.25em;
