--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -58,16 +58,20 @@ $themes: ();
 
 @mixin add-theme($name, $primary) {
     $themes: map.merge($themes, ($name: (
-        "primary": $primary, 
-        "secondary": color.adjust($primary, $hue: 120deg), 
-        "tertiary": color.adjust($primary, $hue: 240deg), 
-        "darkened-20": color.scale($primary, $lightness: -20%),
-        "lightened-20": color.scale($primary, $lightness: 20%),
-        "shifted-10": color-tone-shift($primary, 10%),
-        "shifted-20": color-tone-shift($primary, 20%),
-        "shifted-30": color-tone-shift($primary, 30%),
-        "inverted": color.invert($primary),
-        "complement": color.complement($primary), 
+        "colours": (
+            "primary": $primary, 
+            "secondary": color.adjust($primary, $hue: 30deg), 
+            "tertiary": color.adjust($primary, $hue: 60deg), 
+            "darkened-1": color.scale($primary, $lightness: -10%),
+            "darkened-2": color.scale($primary, $lightness: -20%),
+            "lightened-1": color.scale($primary, $lightness: 10%),
+            "lightened-2": color.scale($primary, $lightness: 20%),
+            "shifted-1": color-tone-shift($primary, 10%),
+            "shifted-2": color-tone-shift($primary, 20%),
+            "shifted-3": color-tone-shift($primary, 30%),
+            "inverted": color.invert($primary),
+            "complement": color.complement($primary), 
+        ),
         "text-colour": get-contrasting-bw($primary),
         "fonts": $fonts,
         "font-size": $font-size,
