--- a/scss/elements/_links.scss
+++ b/scss/elements/_links.scss
@@ -21,11 +21,11 @@
 }
 
 .link {
-    @include prototypes.link(map.get(map.get(variables.$themes, "light"), "primary"));
+    @include prototypes.link(map.get(map.get(map.get(variables.$themes, "light"), "colours"), "primary"));
 }
 
 @each $name, $theme in variables.$themes {
-    $primary: map.get($theme, "primary");
+    $primary: map.get(map.get($theme, "colours"), "primary");
     $text: map.get($theme, "text-colour");
 
     .#{$name}.link {
